# Extractor

./: CMakeLists.txt  README.md  package.xml
extractor_node/: CMakeLists.txt  package.xml
extractor_node/msg/: AvReader.msg
extractor_node/src/: extractor.cpp  extractor_with_time_synchronizer.cpp
src/: extractor.cpp
